lots of changes to content in prep for presentation

--- a/_posts/2011-02-13-23-22-10-basics.markdown
+++ b/_posts/2011-02-13-23-22-10-basics.markdown
@@ -3,3 +3,4 @@
 * Everything is an object, even numbers and strings
 * Limit one logical line on each physical line
 * Whitespace is important
+* strings.py
