--- a/_posts/2011-02-13-23-22-42-operators.markdown
+++ b/_posts/2011-02-13-23-22-42-operators.markdown
@@ -1,4 +1,6 @@
 # Operators
 * Standard math operators
 * 'not', 'or'
+* `` (x > 5) and (x < 10) ``
 * 'in'
+* `` name in ['steve', 'john', 'breanna'] ``
