--- a/_posts/2011-02-13-23-23-09-control.markdown
+++ b/_posts/2011-02-13-23-23-09-control.markdown
@@ -1,5 +1,5 @@
 # Control statements
 * if, elif
 * for (each)
-* Putting it together: guess.py
-* Combined: guestlist.py
+* guess.py
+* guestlist.py
