moving slides around

--- a/_posts/2011-02-13-23-22-11-running.markdown
+++ b/_posts/2011-02-13-23-22-11-running.markdown
@@ -1,4 +1,4 @@
-# First steps
+# Running a script
 * Using the interpreter
 * Great for trying things out, quicker than editing a file
 * Can be extended (i.e. Django)
